Ajout de la fonctionnalité search sur le dashboard

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="{{ url_for('main.trends') }}">Voir les tendances</a></li>
             <li><a href="{{ url_for('main.resources') }}">Voir les ressources</a></li>
+            <li><a href="{{ url_for('main.search') }}">Rechercher</a></li>
             <li><a href="{{ url_for('main.logout') }}">Se déconnecter</a></li>
         </ul>
     </nav>
