--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.resources') }}">Ressources</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.search') }}">Recherche</a>
+                    </li>
                 </ul>
             </div>
         </div>
