Ajout de la page metrics dans le dashboard

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -33,6 +33,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.search') }}">Recherche</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.metrics') }}">Indicateurs</a>
+                    </li>
                 </ul>
             </div>
         </div>
