--- a/dashboard/templates/search.html
+++ b/dashboard/templates/search.html
@@ -75,7 +75,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ article.title }}</h5>
                             <p class="card-text"><small>Auteur : {{ article.authors }} - Publié le {{ article.publication_date }}</small></p>
-                            <a href="{{ article.link }}" class="btn btn-primary" target="_blank">Lire l'article scientifique</a>
+                            <a href="{{ article.article_url }}" class="btn btn-primary" target="_blank">Lire l'article scientifique</a>
                         </div>
                     </div>
                 </div>
