--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -13,6 +13,7 @@
             <li><a href="{{ url_for('main.trends') }}">Voir les tendances</a></li>
             <li><a href="{{ url_for('main.resources') }}">Voir les ressources</a></li>
             <li><a href="{{ url_for('main.search') }}">Rechercher</a></li>
+            <li><a href="{{ url_for('main.metrics') }}">Voir les indicateurs</a></li>
             <li><a href="{{ url_for('main.logout') }}">Se déconnecter</a></li>
         </ul>
     </nav>
