--- a/dashboard/templates/search.html
+++ b/dashboard/templates/search.html
@@ -22,13 +22,13 @@
             <input type="text" id="source" name="source" class="form-control" placeholder="Ex: TechCrunch, The Verge...">
         </div>
 
-        <div class="form-group">
+        <div class="form-group" id="keywords_group">
             <label for="keywords">Mots-clés :</label>
             <input type="text" id="keywords" name="keywords" class="form-control" placeholder="Ex: AI, Machine Learning...">
         </div>
 
         <div class="form-group" id="authors_group">
-            <label for="authors">Auteurs (pour articles scientifiques) :</label>
+            <label for="authors">Auteurs :</label>
             <input type="text" id="authors" name="authors" class="form-control" placeholder="Ex: John Doe...">
         </div>
 
@@ -107,6 +107,7 @@
 document.addEventListener("DOMContentLoaded", function () {
     let searchType = document.getElementById("search_type");
     let sourceGroup = document.getElementById("source_group");
+    let keywordsGroup = document.getElementById("keywords_group")
     let authorsGroup = document.getElementById("authors_group");
 
     function toggleFields() {
@@ -115,6 +116,7 @@ document.addEventListener("DOMContentLoaded", function () {
         // Afficher/Masquer les champs selon le type de recherche
         sourceGroup.style.display = (selectedType === "articles" || selectedType === "videos") ? "block" : "none";
         authorsGroup.style.display = (selectedType === "scientific_articles") ? "block" : "none";
+        sourceGroup.style.display = (selectedType === "articles" || selectedType === "scientific_articles") ? "block" : "none"
     }
 
     // Événement sur changement de sélection
